--- a/client/.env
+++ b/client/.env
@@ -2,8 +2,7 @@ NEXT_PUBLIC_STRAPI_URL="https://strapi-hourglass-develop.up.railway.app/api"
 NODE_ENV: "development"
 JWT_SECRET:'STRAPI_USER'
 WEATHER_KEY ="3ac3a13ff13181d397910c942cb3516e"
+NEXT_PUBLIC_STRAPI_URL2 = "http://localhost:1337/api"
 
 
-
-# https://remarkable-crystal-7fcc5c9fad.strapiapp.com/api
 # https://strapi-hourglass-develop.up.railway.app/api
