--- a/client/.env
+++ b/client/.env
@@ -1,8 +1,7 @@
-NEXT_PUBLIC_STRAPI_URL="https://strapi-hourglass-develop.up.railway.app/api"
 NODE_ENV: "development"
 JWT_SECRET:'STRAPI_USER'
 WEATHER_KEY ="3ac3a13ff13181d397910c942cb3516e"
-NEXT_PUBLIC_STRAPI_URL2 = "http://localhost:1337/api"
+NEXT_PUBLIC_STRAPI_URL2 = "https://hgfserver-production.up.railway.app/api"
 
 
 # https://strapi-hourglass-develop.up.railway.app/api
