--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-zoom-pan-pinch": "^3.1.0",
+    "sharp": "^0.32.6",
     "swiper": "^10.0.3",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
